--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 
     <div id="login-section" >
-        <h1 style="font-family: 'Poppins', san-serif;"><b>Welcome to Social Media Hub</b></h1>
+        <h1 style="font-family: 'Poppins', san-serif;"><b>Welcome to UniSocial</b></h1>
         <button class="btn btn-primary" onclick="login()">Explore More</button>
         <button class="btn btn-secondary" onclick="skipLogin()">Quick Setup</button>
     </div>
